# RPS-PingLib

./: .gitignore  Cargo.toml  README.md
src/: base.rs  lib.rs  main.rs  utils.rs
src/base/: builder.rs  error.rs  linux.rs  ping.rs  protocol.rs  result.rs  utils.rs  windows.rs
src/base/protocol/: icmp.rs  ip_header.rs
src/base/utils/: slice_reader.rs  un_mut.rs
src/utils/: slice_operator.rs
tests/: ipv4.rs  ipv6.rs
