[package]
name = "multi_ping"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
[target.'cfg(not(target_os = "windows"))'.dependencies]
rustix = { version = "0.38.44", features = ["net"] }
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.59.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_IO","Win32_Networking_WinSock"] }

[features]
DGRAM_SOCKET = []
