[package]
name = "rps_ping_lib"
version = "0.1.0"
edition = "2024"
include = [
    "lib.rs",
    "Cargo.toml",
]

[dependencies]
rand = "0.9.0"
volatile = "0.6.1"
[target.'cfg(not(target_os = "windows"))'.dependencies]
libc = "0.2.169"
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.60.0", features = ["Win32_NetworkManagement_IpHelper", "Win32_System_IO","Win32_Networking_WinSock"] }

[features]
DGRAM_SOCKET = []


[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3